--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ vignettes/*.pdf
 2_Processed_data/Yeast_genomes/
 3_Papers/
 .Rproj.user
+Riboviz_work/2_Processed_data/Yeast_genomes/yeast_CDS_w_250utrs.gff3
+Riboviz_work/2_Processed_data/Yeast_genomes/yeast_CDS_w_250utrs.fa
